syntax = "proto3";

package quant_hft.v1;

message MarketSnapshot {
  string instrument_id = 1;
  double last_price = 2;
  double bid_price_1 = 3;
  double ask_price_1 = 4;
  int64 bid_volume_1 = 5;
  int64 ask_volume_1 = 6;
  int64 volume = 7;
  int64 exchange_ts_ns = 8;
  int64 recv_ts_ns = 9;
  string exchange_id = 10;
  string trading_day = 11;
  string action_day = 12;
  string update_time = 13;
  int32 update_millisec = 14;
  double settlement_price = 15;
  double average_price_raw = 16;
  double average_price_norm = 17;
  bool is_valid_settlement = 18;
}

message StateDimension {
  double score = 1;
  double confidence = 2;
}

message Exchange {
  string id = 1;
  string name = 2;
}

message Instrument {
  string symbol = 1;
  string exchange_id = 2;
  string product_id = 3;
  int32 contract_multiplier = 4;
  double price_tick = 5;
  double margin_rate = 6;
  double commission_rate = 7;
  string commission_type = 8;
  double close_today_commission_rate = 9;
}

message Tick {
  string symbol = 1;
  string exchange = 2;
  int64 ts_ns = 3;
  int64 exchange_ts_ns = 4;
  double last_price = 5;
  int32 last_volume = 6;
  double ask_price1 = 7;
  int32 ask_volume1 = 8;
  double bid_price1 = 9;
  int32 bid_volume1 = 10;
  int64 volume = 11;
  double turnover = 12;
  int64 open_interest = 13;
}

message Bar {
  string symbol = 1;
  string exchange = 2;
  string timeframe = 3;
  int64 ts_ns = 4;
  double open = 5;
  double high = 6;
  double low = 7;
  double close = 8;
  int64 volume = 9;
  double turnover = 10;
  int64 open_interest = 11;
}

message Order {
  string order_id = 1;
  string strategy_id = 2;
  string symbol = 3;
  string exchange = 4;
  string side = 5;
  string offset = 6;
  string order_type = 7;
  double price = 8;
  int32 quantity = 9;
  int32 filled_quantity = 10;
  double avg_fill_price = 11;
  string status = 12;
  int64 created_at_ns = 13;
  int64 updated_at_ns = 14;
  double commission = 15;
  string message = 16;
  string account_id = 17;
}

message Trade {
  string trade_id = 1;
  string order_id = 2;
  string strategy_id = 3;
  string symbol = 4;
  string exchange = 5;
  string side = 6;
  string offset = 7;
  double price = 8;
  int32 quantity = 9;
  int64 trade_ts_ns = 10;
  double commission = 11;
  double profit = 12;
  string account_id = 13;
}

message Position {
  string symbol = 1;
  string exchange = 2;
  string strategy_id = 3;
  string account_id = 4;
  int32 long_qty = 5;
  int32 short_qty = 6;
  int32 long_today_qty = 7;
  int32 short_today_qty = 8;
  int32 long_yd_qty = 9;
  int32 short_yd_qty = 10;
  double avg_long_price = 11;
  double avg_short_price = 12;
  double position_profit = 13;
  double margin = 14;
  int64 update_time_ns = 15;
}

message Account {
  string account_id = 1;
  double balance = 2;
  double available = 3;
  double margin = 4;
  double commission = 5;
  double position_profit = 6;
  double close_profit = 7;
  double risk_degree = 8;
  int64 update_time_ns = 9;
}

message StateSnapshot7D {
  string instrument_id = 1;
  StateDimension trend = 2;
  StateDimension volatility = 3;
  StateDimension liquidity = 4;
  StateDimension sentiment = 5;
  StateDimension seasonality = 6;
  StateDimension pattern = 7;
  StateDimension event_drive = 8;
  int64 ts_ns = 9;
}

message SignalIntent {
  string strategy_id = 1;
  string instrument_id = 2;
  string side = 3;
  string offset = 4;
  int32 volume = 5;
  double limit_price = 6;
  int64 ts_ns = 7;
  string trace_id = 8;
}

message OrderIntent {
  string account_id = 1;
  string client_order_id = 2;
  string instrument_id = 3;
  string side = 4;
  string offset = 5;
  string order_type = 6;
  int32 volume = 7;
  double price = 8;
  int64 ts_ns = 9;
  string trace_id = 10;
  string strategy_id = 11;
  string hedge_flag = 12;
  string time_condition = 13;
  string volume_condition = 14;
}

message RiskDecision {
  string action = 1;
  string rule_id = 2;
  string rule_group = 3;
  string rule_version = 4;
  string policy_id = 5;
  string policy_scope = 6;
  double observed_value = 7;
  double threshold_value = 8;
  string decision_tags = 9;
  string reason = 10;
  int64 decision_ts_ns = 11;
}

message OrderEvent {
  string account_id = 1;
  string client_order_id = 2;
  string exchange_order_id = 3;
  string instrument_id = 4;
  string side = 30;
  string offset = 31;
  string status = 5;
  int32 total_volume = 6;
  int32 filled_volume = 7;
  double avg_fill_price = 8;
  string reason = 9;
  int64 ts_ns = 10;
  string trace_id = 11;
  string execution_algo_id = 12;
  int32 slice_index = 13;
  int32 slice_total = 14;
  bool throttle_applied = 15;
  string venue = 16;
  string route_id = 17;
  double slippage_bps = 18;
  double impact_cost = 19;
  string exchange_id = 20;
  string status_msg = 21;
  string order_submit_status = 22;
  string order_ref = 23;
  int32 front_id = 24;
  int32 session_id = 25;
  string trade_id = 26;
  string event_source = 27;
  int64 exchange_ts_ns = 28;
  int64 recv_ts_ns = 29;
}

message PositionSnapshot {
  string account_id = 1;
  string instrument_id = 2;
  string direction = 3;
  int32 volume = 4;
  double avg_price = 5;
  double unrealized_pnl = 6;
  double margin = 7;
  int64 ts_ns = 8;
}

message HealthEvent {
  string component = 1;
  string level = 2;
  string message = 3;
  int64 ts_ns = 4;
}

message TradingAccountSnapshot {
  string account_id = 1;
  string investor_id = 2;
  double balance = 3;
  double available = 4;
  double curr_margin = 5;
  double frozen_margin = 6;
  double frozen_cash = 7;
  double frozen_commission = 8;
  double commission = 9;
  double close_profit = 10;
  double position_profit = 11;
  string trading_day = 12;
  int64 ts_ns = 13;
  string source = 14;
}

message InvestorPositionSnapshot {
  string account_id = 1;
  string investor_id = 2;
  string instrument_id = 3;
  string exchange_id = 4;
  string posi_direction = 5;
  string hedge_flag = 6;
  string position_date = 7;
  int32 position = 8;
  int32 today_position = 9;
  int32 yd_position = 10;
  int32 long_frozen = 11;
  int32 short_frozen = 12;
  int32 open_volume = 13;
  int32 close_volume = 14;
  double position_cost = 15;
  double open_cost = 16;
  double position_profit = 17;
  double close_profit = 18;
  double margin_rate_by_money = 19;
  double margin_rate_by_volume = 20;
  double use_margin = 21;
  int64 ts_ns = 22;
  string source = 23;
}

message BrokerTradingParamsSnapshot {
  string account_id = 1;
  string investor_id = 2;
  string margin_price_type = 3;
  string algorithm = 4;
  int64 ts_ns = 5;
  string source = 6;
}

message InstrumentMetaSnapshot {
  string instrument_id = 1;
  string exchange_id = 2;
  string product_id = 3;
  int32 volume_multiple = 4;
  double price_tick = 5;
  bool max_margin_side_algorithm = 6;
  int64 ts_ns = 7;
  string source = 8;
}
